# GKlib

./: CMakeLists.txt  GKlibConfig.cmake.in
test/: CMakeLists.txt
